--- a/swag.css
+++ b/swag.css
@@ -6,9 +6,13 @@
 	color: white;
 	text-align: center;
 }
-.center{
+.center-button{
 	margin: auto;
 	padding: 2%;
+	box-sizing: border-box;
+}
+.center-text{
+	text-align: center;
 }
 
 
