--- a/swag.css
+++ b/swag.css
@@ -1,6 +1,3 @@
-body{
-	margin: 0;
-}
 .banner{
 	background-image: url(images/bg.jpeg);
 	background-repeat: round;
@@ -30,10 +27,10 @@ body{
 .footer{
 	background-color: black;
 	color: white;
+	height: 100%;
+	padding: 1%;
 }
-.footer h5{
-	padding: 2%;
-}
+
 
 
 
